# scarecrow-gsettings-desktop-schemas

./: HACKING  MAINTAINERS  README  meson.build  scarecrow-gsettings-desktop-schemas.pc.in
headers/: meson.build
po/: POTFILES.in  POTFILES.skip  as.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  lt.po  lv.po  ml.po  ms.po  nb.po  ne.po  nl.po  oc.po  or.po  pa.po  pl.po  (+17 more)
schemas/: gsettings-desktop-schemas.convert  io.github.scarecrow-de.desktop.a11y.applications.gschema.xml.in  io.github.scarecrow-de.desktop.a11y.gschema.xml.in  io.github.scarecrow-de.desktop.a11y.keyboard.gschema.xml.in  io.github.scarecrow-de.desktop.a11y.magnifier.gschema.xml.in  io.github.scarecrow-de.desktop.a11y.mouse.gschema.xml.in  io.github.scarecrow-de.desktop.app-folders.gschema.xml.in  io.github.scarecrow-de.desktop.background.gschema.xml.in  io.github.scarecrow-de.desktop.calendar.gschema.xml.in  io.github.scarecrow-de.desktop.datetime.gschema.xml.in  io.github.scarecrow-de.desktop.default-applications.gschema.xml.in  io.github.scarecrow-de.desktop.input-sources.gschema.xml.in  io.github.scarecrow-de.desktop.interface.gschema.xml.in  io.github.scarecrow-de.desktop.lockdown.gschema.xml.in  io.github.scarecrow-de.desktop.media-handling.gschema.xml.in  io.github.scarecrow-de.desktop.notifications.gschema.xml.in  io.github.scarecrow-de.desktop.peripherals.gschema.xml.in  io.github.scarecrow-de.desktop.privacy.gschema.xml.in  io.github.scarecrow-de.desktop.screensaver.gschema.xml.in  io.github.scarecrow-de.desktop.search-providers.gschema.xml.in  io.github.scarecrow-de.desktop.session.gschema.xml.in  io.github.scarecrow-de.desktop.sound.gschema.xml.in  io.github.scarecrow-de.desktop.thumbnail-cache.gschema.xml.in  io.github.scarecrow-de.desktop.thumbnailers.gschema.xml.in  io.github.scarecrow-de.desktop.wm.keybindings.gschema.xml.in  io.github.scarecrow-de.desktop.wm.preferences.gschema.xml.in  io.github.scarecrow-de.system.locale.gschema.xml.in  io.github.scarecrow-de.system.location.gschema.xml.in  io.github.scarecrow-de.system.proxy.gschema.xml.in  io.github.scarecrow.desktop.a11y.applications.gschema.xml.in  io.github.scarecrow.desktop.a11y.gschema.xml.in  io.github.scarecrow.desktop.a11y.keyboard.gschema.xml.in  io.github.scarecrow.desktop.a11y.magnifier.gschema.xml.in  io.github.scarecrow.desktop.a11y.mouse.gschema.xml.in  io.github.scarecrow.desktop.app-folders.gschema.xml.in  io.github.scarecrow.desktop.background.gschema.xml.in  io.github.scarecrow.desktop.calendar.gschema.xml.in  io.github.scarecrow.desktop.datetime.gschema.xml.in  io.github.scarecrow.desktop.default-applications.gschema.xml.in  io.github.scarecrow.desktop.input-sources.gschema.xml.in  (+50 more)
